--- a/Rest-APIs/package.json
+++ b/Rest-APIs/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "server":"nodemon server.js"
+    "server": "nodemon server.js"
   },
   "keywords": [],
   "author": "piyush chuahan",
@@ -15,6 +15,8 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^5.1.0",
-    "nodemon": "^3.1.10"
+    "method-override": "^3.0.0",
+    "nodemon": "^3.1.10",
+    "uuid": "^13.0.0"
   }
 }
