--- a/sql/package.json
+++ b/sql/package.json
@@ -13,7 +13,10 @@
   "description": "sql with nodejs",
   "dependencies": {
     "@faker-js/faker": "^10.1.0",
+    "ejs": "^3.1.10",
+    "express": "^5.2.1",
     "mysql2": "^3.15.3",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "uuid": "^13.0.0"
   }
 }
