--- a/sql/package.json
+++ b/sql/package.json
@@ -15,6 +15,7 @@
     "@faker-js/faker": "^10.1.0",
     "ejs": "^3.1.10",
     "express": "^5.2.1",
+    "method-override": "^3.0.0",
     "mysql2": "^3.15.3",
     "nodemon": "^3.1.11",
     "uuid": "^13.0.0"
