--- a/mongoDB/package.json
+++ b/mongoDB/package.json
@@ -1,23 +1,19 @@
 {
   "name": "mongodb",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "server":"nodemon server.js"
+    "start":"nodemon index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "piyush chauhan",
   "license": "ISC",
   "type": "commonjs",
   "description": "",
   "dependencies": {
-    "dotenv": "^17.2.3",
-    "ejs": "^3.1.10",
-    "express": "^5.1.0",
-    "mongoose": "^9.0.0",
-    "nodemon": "^3.1.11",
-    "path": "^0.12.7"
+    "express": "^5.2.1",
+    "mongoose": "^9.0.2",
+    "nodemon": "^3.1.11"
   }
 }
