--- a/CRUD/package.json
+++ b/CRUD/package.json
@@ -8,11 +8,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"nodemon index.js"
+    "start": "nodemon index.js"
   },
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^5.2.1",
+    "method-override": "^3.0.0",
     "mongoose": "^9.0.2",
     "nodemon": "^3.1.11"
   }
